Fixed problem that titles of sub-entities-grids were often not visible.

--- a/FrontEnd/Modules/Base/Css/masterpage.css
+++ b/FrontEnd/Modules/Base/Css/masterpage.css
@@ -219,9 +219,6 @@ ins {
     display: flex;
     flex-direction: column;
 }
-.k-window-content > .pane-content .k-tabstrip .dynamicTabContent .gridview h4 {
-    display: none;
-}
 .k-window-content > .pane-content .k-tabstrip .dynamicTabContent .k-grid {
     margin: 0;
     max-width: 100%;
